--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1001,6 +1001,26 @@
   margin-left: 24rpx;
 
 }
+/* 一个大图的样式 */
+.setMeal-inner-i{
+  height: 165rpx;
+  white-space: nowrap; 
+  width: 100%;
+  border-bottom: 20rpx #f8f8f8
+}
+.setMeal-item{
+   width:701rpx;
+  display: inline-block; 
+  margin-left: 24rpx;
+}
+ .setMeal-item image{
+  width: 100%;
+  height:100%;
+} 
+.setMeal-item .largerMap{
+  width:701rpx;
+  height:126rpx;
+}
 .setMeal-text{
   width: 166rpx;
   height: 37rpx;
