--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -330,3 +330,105 @@ button.header-Datum{
   padding-left:0;
   padding-right:0;
 }
+/* 客服弹框 */
+image{
+  width: 100%;
+  height: 100%;
+}
+.zhezao{
+  position:fixed;
+  width:100%;
+  height:100%;
+  top:0px;
+  background:rgba(0,0,0,0.4);
+  overflow: hidden;
+  }
+.t_w{
+  width:80%;
+  margin-left:85rpx;
+  position:relative;
+  background:#ffffff;
+  }
+.tanchu_view{
+  width: 80%;
+  margin:45% auto;
+  overflow: hidden;
+  /* background-color: #fff1e6; */
+  border-radius: 10rpx;
+  padding: 4rpx;
+  }
+ 
+ 
+.bg_view{
+  margin:50rpx auto 30rpx auto;
+  color:#919191;
+  font-size:35rpx;
+  /* background-color: #fff1e6; */
+  padding:0rpx 30rpx;
+  text-align: center;
+  }
+ 
+ 
+  .txtys{
+  width: 400rpx;
+  height: 427rpx;
+  margin-bottom: 22rpx;
+  margin-left:54rpx;
+
+  }
+ .txtys .image{
+  width: 400rpx;
+  height: 400rpx;
+ }
+.txtsure{
+ width: 100%;
+ height: 100%;
+ display: flex;
+ justify-content: center;
+ margin: 20rpx;
+}
+ 
+/*确定背景*/
+.txtsurebg{
+  width: 300rpx;
+  height: 300rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  margin: 50rpx;
+  background-color: burlywood;
+   flex-direction: column;
+}
+ 
+/*确定图标*/
+.txtsureimg{
+  display:block;
+  width:120rpx;
+  height:120rpx;
+}
+ 
+/*确定文本*/
+.txtsurename{
+   margin-bottom: 0rpx;
+   color: white;
+   font-size: 70rpx;
+}
+ 
+/*右上角图标*/
+.t_image{
+  width:60rpx;
+  height:55rpx;
+  position: absolute;
+  top: 3%;
+  left:86%;
+  z-index: 45;
+  }
+ 
+/*右上角图标*/
+.t_image1{
+  display:block;
+  width:100%;
+  height:100%;
+  }
+ 
